--- a/.github/workflows/llm.yml
+++ b/.github/workflows/llm.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Install Playwright
         run: npx playwright install
